CardComponent im eigenen Modul

--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -6,3 +6,7 @@
 
 
 <strong>Anzahl Bücher:</strong> {{ books.length }}
+
+
+<br-card [title]="books[0].title" body="Das ist ein Test"></br-card>
+<br-card body="Ein Test ohne Title"></br-card>
