Card mit Content Projection

--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -8,5 +8,13 @@
 <strong>Anzahl Bücher:</strong> {{ books.length }}
 
 
-<br-card [title]="books[0].title" body="Das ist ein Test"></br-card>
+<br-card [title]="books[0].title" body="Das ist ein Test">
+  hdsuvhoödsgjhsuidgfidsköjioh
+  <p>
+    <strong>Hallo Welt</strong>
+    {{ books[0].title }}
+  </p>
+</br-card>
+
+
 <br-card body="Ein Test ohne Title"></br-card>
