--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -2,5 +2,11 @@
   <h1>{{ title }}</h1>
 
   <br-dashboard></br-dashboard>
+
+  <hr>
+
+  <p class="small text-muted">
+    {{ d | date:'fullDate' }}
+  </p>
 </div>
 
