--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -14,6 +14,10 @@
       <span *ngFor="let s of getRating()">⭐️</span>
 
       <p>
+        Preis: {{ book.price | currency:'EUR' }}
+      </p>
+
+      <p>
         {{ book.description }}
       </p>
   </div>
