--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -20,5 +20,9 @@
       <p>
         {{ book.description }}
       </p>
+
+
+      <button (click)="doRateUp()" class="btn btn-success mr-2"> + </button>
+      <button (click)="doRateDown()" class="btn btn-danger mr-2"> – </button>
   </div>
 </div>
