--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -1,4 +1,8 @@
-<br-book *ngFor="let b of books" [book]="b"></br-book>
+<br-book
+  *ngFor="let b of books"
+  [book]="b"
+  (rateUp)="rateUp($event)"
+  (rateDown)="rateDown($event)"></br-book>
 
 <ul>
   <li *ngFor="let b of books; index as i">{{ i + 1 }} {{ b.title }}</li>
