--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -22,7 +22,7 @@
       </p>
 
 
-      <button (click)="doRateUp()" class="btn btn-success mr-2"> + </button>
+      <button (click)="doRateUp()" data-tid="rateUpBtn" class="btn btn-success mr-2"> + </button>
       <button (click)="doRateDown()" class="btn btn-danger mr-2"> – </button>
   </div>
 </div>
