--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+
+<a class="btn btn-primary mr-2" routerLink="foo">Foo</a>
+<a class="btn btn-primary mr-2" routerLink="bar">Bar</a>
+<a class="btn btn-danger mr-2" routerLink="./">None</a>
+
+<div style="border: 2px solid red">
+  <router-outlet></router-outlet>
+</div>
+
 <ng-template #loading>
   Bücher werden geladen...
 </ng-template>
