--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -2,9 +2,9 @@
   <h1>{{ title }}</h1>
 
   <div class="mb-4">
-    <a routerLink="/books" class="mr-3">Dashboard</a>
-    <a routerLink="/books/create" class="mr-3">Buch erstellen</a>
-    <a routerLink="/books/search" class="mr-3">Suche</a>
+    <a routerLink="/books" routerLinkActive="active" class="mr-3" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
+    <a routerLink="/books/create" routerLinkActive="active" class="mr-3">Buch erstellen</a>
+    <a routerLink="/books/search" routerLinkActive="active" class="mr-3">Suche</a>
   </div>
 
   <router-outlet></router-outlet>
