--- a/book-rating/src/app/books/book-form/book-form.component.html
+++ b/book-rating/src/app/books/book-form/book-form.component.html
@@ -1,4 +1,27 @@
-<p>book-form works!</p>
+<form [formGroup]="bookForm">
 
+  <div class="form-group">
+    <label>ISBN</label>
+    <input type="text" formControlName="isbn" class="form-control">
+  </div>
 
-<button (click)="submitForm()">Click</button>
+  <div class="form-group">
+    <label>Titel</label>
+    <input type="text" formControlName="title" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label>Beschreibung</label>
+    <textarea formControlName="description" class="form-control"></textarea>
+  </div>
+
+  <div class="form-group">
+    <label>Preis</label>
+    <input type="number" formControlName="price" class="form-control">
+  </div>
+
+</form>
+
+<pre>
+{{ bookForm.value | json }}
+</pre>
