--- a/book-rating/src/app/books/book-form/book-form.component.html
+++ b/book-rating/src/app/books/book-form/book-form.component.html
@@ -1,8 +1,11 @@
-<form [formGroup]="bookForm">
+<form [formGroup]="bookForm" (ngSubmit)="submitForm()">
 
   <div class="form-group">
     <label>ISBN</label>
     <input type="text" formControlName="isbn" class="form-control">
+
+    <div class="feedback-error" *ngIf="isInvalid('isbn')">Die ISBN ist ungültig.</div>
+    <div class="feedback-error" *ngIf="hasError('isbn', 'minlength')">Die ISBN ist zu kurz.</div>
   </div>
 
   <div class="form-group">
@@ -19,6 +22,17 @@
     <label>Preis</label>
     <input type="number" formControlName="price" class="form-control">
   </div>
+
+
+  <div formArrayName="authors">
+    <button class="btn btn-primary" (click)="addAuthorControl()">Add author</button>
+
+    <div class="form-group" *ngFor="let x of authors.controls; index as i">
+      <input type="text" [formControlName]="i" class="form-control">
+    </div>
+  </div>
+
+  <button class="btn btn-danger" type="submit" [disabled]="bookForm.invalid">Abschicken</button>
 
 </form>
 
